--- a/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/src/App.css
+++ b/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/src/App.css
@@ -26,16 +26,25 @@
   color: #888;
 }
 
-.llm-chat {
-    border: 1px solid #ffdd00;
+.llm-chat-container {
     position: absolute;
+    right: 15px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    bottom: 0;
+}
+.llm-chat {
+    padding: 15px 0;
+    border: 1px solid #ffdd00;
+    position: relative;
     bottom: 0;
     right: 0;
     width: 350px;
     height: 450px;
     white-space: pre-line;
     background-color: #ffdd00;
-    border-radius: 5px;
+
+
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -44,28 +53,31 @@
 
 .llm-chat span:nth-child(odd) {
     padding: 15px;
-    background-color: #ffffff; /* or any color you want */
-    color: #1a1a1a;
+    background-color: #555555; /* or any color you want */
+    /* or any color you want */
+    color: #FFFFFF;
     width: fit-content;
     position: relative;
-    right: -60px;
     border-radius: 3px;
     max-width: 250px;
-    float: right;
     white-space: pre-line;
+    margin-left: 5px;
 }
 
 .llm-chat span:nth-child(even) {
     padding: 15px;
-    background-color: #D4D3DD; /* or any color you want */
+    background-color: #FFFFFF; /* or any color you want */
     color: #1a1a1a;
     width: fit-content;
     position: relative;
-    left: 10px;
     border-radius: 3px;
     white-space: pre-line;
-
+    margin-right: 15px;
+    max-width: 250px;
+    right: -55px;
+    word-break: break-all;
 }
+
 .header {
     height: 80px;
     background-color: white;
@@ -76,11 +88,14 @@
     align-items: center;
     padding-left: 10px;
     gap: 14px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .llm-chat-logo {
     position: relative;
     left: 0;
+    background-color: #535bf2;
 }
 
 .header span {
@@ -97,4 +112,62 @@ span {
     padding: 0;       /* supprime le padding au cas où */
     line-height: 1.4;
     display: block;
+}
+
+
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px; /* for horizontal scrollbar */
+}
+
+/* scrollbar track (background) */
+::-webkit-scrollbar-track {
+    background: #f0f0f0;
+    border-radius: 6px;
+}
+
+/* scrollbar thumb (the draggable part) */
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 6px;
+    border: 3px solid #f0f0f0; /* gives padding around thumb */
+}
+
+/* on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+
+textarea {
+    resize: none;
+    border-bottom-right-radius: unset;
+    border: unset;
+    height: 80px;
+    min-height: 80px;
+    max-height: 80px;
+}
+
+textarea:hover,
+textarea:focus,
+textarea:focus-visible,
+textarea:active{
+    resize: none;
+    border-bottom-right-radius: unset;
+    border: unset;
+    height: 80px;
+    min-height: 80px;
+    max-height: 80px;
+}
+
+button {
+    border-radius: unset;
+    height: 80px;
+    min-height: 80px;
+    max-height: 80px;
+}
+
+
+button:hover {
+    border: unset;
 }
