--- a/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/src/App.css
+++ b/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/src/App.css
@@ -32,6 +32,8 @@
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     bottom: 0;
+    display: none;
+
 }
 .llm-chat {
     padding: 15px 0;
@@ -43,7 +45,6 @@
     height: 450px;
     white-space: pre-line;
     background-color: #ffdd00;
-
 
     display: flex;
     flex-direction: column;
@@ -90,6 +91,7 @@
     gap: 14px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    position: relative;
 }
 
 .llm-chat-logo {
