--- a/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/src/index.css
+++ b/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/src/index.css
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 a {
@@ -65,4 +66,58 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+.pulse-container {
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
+    position: absolute;
+    bottom: 20px;
+    right: 40px;
+}
+
+.pulse-button {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -50px;
+    display: block;
+    width: 100px;
+    height: 100px;
+    font-size: 1.3em;
+    font-family: 'Trebuchet MS', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 100px;
+    letter-spacing: -1px;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    background: #5a99d4;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 rgba(90, 153, 212, .5);
+    -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+    -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+    -ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+    animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+}
+.pulse-button:hover {
+    -webkit-animation: none;
+}
+
+
+@-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(90, 153, 212, 0);}}
+@-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(90, 153, 212, 0);}}
+@-ms-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(90, 153, 212, 0);}}
+@keyframes pulse {to {box-shadow: 0 0 0 45px rgba(90, 153, 212, 0);}}
+
+
+.close {
+    position: absolute;
+    right: 10px;
+    top: 2px;
+    font-size: 18px;
+    cursor: pointer;
 }
