--- a/llm-product-assistance/src/main/resources/templates/page.qute.html
+++ b/llm-product-assistance/src/main/resources/templates/page.qute.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello {name ?: "Qute"}</title>
+	<link rel="stylesheet" href="/front/llm-product-recommandation-chat/dist/assets/index-I5thA2ca.css">
     <style>
         body {
             background-color: #000;
@@ -27,7 +28,8 @@
 <h1>Hello <b>{name ?: "Qute"}</b></h1>
 
 <p>Create your web page using Quarkus RESTEasy & Qute</p>
-<div id="root"></div>
-<script type="module" src="/front/llm-product-recommandation-chat/src/index.tsx"></script>
+	<div id="root"></div>
+	<script type="module" src="/front/llm-product-recommandation-chat/@vite/client"></script>
+	<script type="module" src="/front/llm-product-recommandation-chat/src/index.tsx"></script>
 </body>
 </html>
