--- a/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/src/App.css
+++ b/llm-product-assistance/src/main/resources/front/llm-product-recommandation-chat/src/App.css
@@ -63,6 +63,7 @@
     max-width: 250px;
     white-space: pre-line;
     margin-left: 5px;
+    word-break: break-all;
 }
 
 .llm-chat span:nth-child(even) {
